--- a/index.html
+++ b/index.html
@@ -6,8 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Playlist-ify</title>
     <link rel="stylesheet" href="./public/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
+    <script type="module" src="./src/data.js"></script>
 </head>
 <body>
+    <div id="navbar-container"></div>
+    <div id="user-interface" class="centered"></div>
     
+    <script type="module" src="./src/app.js"></script>
 </body>
 </html>
